# ChangeLog

## [Unreleased]
### Added
 * number icons
 * FreeMind import with number icons and hook text
 * Simple HTML export supports flags

### Changed
 * Use Gtk+3 library
 * store icons to node right
 * Enter || Return key save values on points widget
 * select color by new ColorChooserDialog
 * Changelog for users

### Fixed
 * center map when it is possible
 * MIN/MAX bug fix
 * rewrite editform and fix it's UX bugs
 * working gui colors detection

### Removed
 * remove extra icons, and use system icons instead

## [0.5.0] - 2014-06-02
### Added
 * Italian translation from evanmac <nicola.lomartire@gmail.com>
 * Spanish translation from Luis Garcia Sevillano <floss.dev@gmail.com>
 * Plus and Minus keys for expand and collapse ideas
 * Points support
 * #4 More usable points function setting
 * Map settings are save to map file
 * File properties have own dialog
 * 128x128 icon
 * Create and modify time are stored to file and show on preferences dialog
 * Tabs have popup menu and could be reordered
 * Welcome tab could be restore with other files
 * Full txt export
 * Export to simple html
 * Root node can have color and points too
 * node context menu
 * better manipulation with colors in color dialog
 * Base (black and white) icon flags/states

### Changed
 * Remove unopend last files from config
 * Parent and node without children are still expand
 * file path is on properties dialog

### Fixed
  * Store translators in right section in about dialog
  * gtk property in Tab interface
  * Bug fix about cursor moving to collapsed ideas
  * Recent files in welcome tab is disabled if is not available
  * #4 Last open files works well
  * editform size manipulation
  * Sigsegv bugfix while apply style on nondraw maps
  * Do not remove new files from last open list
  * #15 idea point are working
  * Import map is centered too
  * rising weight count bug fix
  * fallback update (not svg support in pixbuf)

## [0.4.0] 2012-11-04

  * Exporting map to png file